# python-productboard-dovetail

./: PROMPT_BUILDING.md  README.md  requirements.txt
.devcontainer/: devcontainer.json
prd-pipeline/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
prd-pipeline/api/: __init__.py  anthropic_client.py  base.py  confluence.py  dovetail.py  productboard.py
prd-pipeline/app/: __init__.py  api_server.py  config.py  main.py  run_async.py  state.py
prd-pipeline/components/: connection_status.py  data_preview.py  forms.py  loading.py  markdown_editor.py
prd-pipeline/core/: __init__.py  models.py  prd_generator.py  prompts.py
prd-pipeline/pages/: __init__.py  step_data_sources.py  step_generation.py  step_history.py  step_prompt_config.py  step_publish.py  step_review.py  step_setup.py
prd-pipeline/scripts/: verify_prompt_build.py
prd-pipeline/services/: __init__.py  context_data.py  history.py
prd-pipeline/services/prompt_builder/: __init__.py  builder.py  models.py  normalizer.py
prd-pipeline/services/prompt_builder/strategies/: __init__.py  base.py  default.py
prd-pipeline/templates/prd_templates/: default.md
prd-pipeline/ui/: __init__.py  layout.py  sidebar.py  theme.py
