[project]
name = "prd-pipeline"
version = "0.1.0"
description = "Automated PRD Generation Pipeline - Streamlit app for enterprise product managers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "httpx>=0.25.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*", "core*", "services*", "ui*", "components*", "pages*"]
